@@ -1,3 +1,7 @@
+2004-09-24  Zack Weinberg  <zack@codesourcery.com>
+
+	* warnings.m4: New file.
+
 2004-09-23  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR bootstrap/17369
